osxvideosink: Fix build on updated OS X Leopard

https://bugzilla.gnome.org/show_bug.cgi?id=721245